--- a/index.css
+++ b/index.css
@@ -64,12 +64,12 @@ body {
 .downloadButton {
     margin-left: 3px;
     width: 130px;
-    padding: 5px;
+    padding: 0px 5px;
 }
 
 .playButton {
     width: 120px;
-    padding: 25px;
+    padding: 5px;
 }
 
 .button:hover{
