--- a/index.css
+++ b/index.css
@@ -4,6 +4,13 @@ body {
     font-family: Comfortaa, cursive;
 }
 
+a {
+    color: aqua;
+}
+a: :visited {
+    counter: aqua;
+}
+
 .titleDiv {
     text-align: center;
     font-size: 1.4rem;
@@ -102,3 +109,26 @@ body {
     font-size: 13px;
 }
 
+.footerDiv {
+    width: 80vw;
+    margin-left: 10vw;
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    /* border: 2px solid red; */
+}
+
+.audioDiv {
+    width: 80vw;
+    margin: auto;
+    margin-top: 5vh;
+    text-align: center;
+}
+
+.downloadButtonLarge {
+    width: 290px;
+}
+
+.copyButtonLarge {
+    width: 290px;
+}
